(This file, NEWS, lists new features and enhancements. See CHANGES for fixes.)

3.3.1 unreleased

  * The makefile has been made more distro friendly by making it possible
    to override all compiler and linker options.

3.3.0 2020-02-27

  * You can now Save (^A) named documents from within the
    SelectDoc (F4) requester.

  * The mark, if set, is visible.

  * Warning about opening a document with the same name as an existing
    document now considers the fully qualified canonical path and name
    of each rather than just their basenames.

  * Status bar Modified flag (*) may also be underlined, indicating the
    corresponding file's modification time has changed since the document
    was loaded or saved.

3.2.0 2019-09-30

  * Macros: They now work across multiple documents. You can cancel macro
    recording, and append new recorded commands to your current macro.

  * New documents inherit their predecessor's current macro, search, and
    replace strings.

  * Saving of read-only documents requires confirmation.

  * Word completion now does not consider the word the cursor is currently
    in, which helps in disambiguating.

  * The option -h is now an alias for --help. Thanks to Lonnie Abelbeck for
    implementing this feature.

  * Add asterisk.jsf syntax.

  * FIND in string inputs brings up a requester with your input history.
    Use Enter to replace, TAB to insert into your input line; Escape to exit.

  * Enhanced commands: MoveEOW, NextWord, and PrevWord can now move to either
    end of the indicated word via optional '<' and '>' parameter modifiers.

  * Requesters make better use of white space.

3.1.2 2018-10-06

  * RepeatLast now accepts "Find" or "Replace" after its optional number so
    you can explicitly repeat either operation even if the other was most
    recently performed.

  * We now use the xenl property to detect whether we can write on the last
    column of the last line, thus making the status bar complete.
